--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,39 @@
-# This blueprint defines the services for the DrivePulse application on Render.
-# It uses a free-tier managed database and a free-tier web service.
 services:
-  # 1. The API Service (Web Service)
-  # This is your main NestJS application, which will have a public URL.
   - type: web
     name: drive-pulse-api
     env: docker
-    # We use Dockerfile.dev as it's configured for running the application.
     dockerfilePath: ./Dockerfile.dev
-    # The 'starter' plan is eligible for the free tier.
     plan: free
-    # Define the environment variables required by your API.
     envVars:
-      # Render provides the port via the PORT env var, but we tell our app to listen on it.
       - key: API_PORT
         value: 10000
-      # This instruction tells Render to get the database connection string
-      # directly from the managed database defined below. Render securely handles
-      # injecting the correct hostname, username, and password.
       - key: DATABASE_URL
-        fromDatabase:
-          name: drivepulse-db-managed # This must match the name of the database service below.
-          property: connectionString
+        value: mongodb://drive-pulse-db:27017/your-database-name
+      # Add other environment variables from your .env file here
+      - key: MONGO_INITDB_ROOT_USERNAME
+        sync: false
+      - key: MONGO_INITDB_ROOT_PASSWORD
+        sync: false
+      - key: MONGO_INITDB_DATABASE
+        sync: false
+    # Removed buildCommand and startCommand - these should be in your Dockerfile
+    healthCheckPath: /
 
-# 2. The Managed MongoDB Instance
-# This replaces a custom 'pserv' database container and is eligible for the free tier.
-databases:
-  - name: drivepulse-db-managed
-    # This specifies the actual name of the database inside the MongoDB instance.
-    databaseName: drive_pulse
-    # We explicitly choose the free plan for our database.
+  - type: pserv
+    name: drive-pulse-db
+    env: docker
+    dockerfilePath: ./Dockerfile
     plan: free
+    envVars:
+      - key: MONGO_INITDB_ROOT_USERNAME
+        sync: false
+      - key: MONGO_INITDB_ROOT_PASSWORD
+        sync: false
+      - key: MONGO_INITDB_DATABASE
+        sync: false
+    disk:
+      name: mongodb-data
+      mountPath: /data/db
+      sizeGB: 10
+
+databases: []
