--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,17 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     restart: always
-    env_file:
-      - .env
-    # Override DATABASE_URL to use the service name 'db' as the hostname
+    # Removed env_file directive
     environment:
-      DATABASE_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@db:27017/${MONGO_INITDB_DATABASE}?authSource=admin
+      API_PORT: 8080
+      # Explicitly define DATABASE_URL for inter-service communication
+      # Using the internal service name 'db' and its default internal port '27017'
+      DATABASE_URL: mongodb://root:password@db:27017/drive-pulse?authSource=admin
     ports:
-      - '${API_PORT}:${API_PORT}'
+      # Map the host port (API_PORT from .env) to the container's internal port
+      - '8080:8080' # Explicitly use 8080 from .env, or use variable if Koyeb supports
     volumes:
-      # Mounts the project directory to the container.
       - .:/usr/src/app
-      # Prevents the node_modules directory on the host from overwriting the one in the container.
       - /usr/src/app/node_modules
     depends_on:
       - db
@@ -31,14 +31,15 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    env_file:
-      - .env
+    # Removed env_file directive
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      # Explicitly define environment variables for MongoDB initialization
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: drive-pulse
     ports:
-      - '${MONGO_PORT}:27017'
+      # Map the host port (MONGO_PORT from .env) to the container's internal port
+      - '27018:27017' # Explicitly use 27018 from .env
     volumes:
       - mongodb_data:/data/db
     networks:
