--- a/mongod.conf
+++ b/mongod.conf
@@ -1,3 +1,16 @@
 net:
   bindIp: 0.0.0.0
   port: 27017
+
+security:
+  authorization: enabled
+
+storage:
+  dbPath: /data/db
+  journal:
+    enabled: true
+
+systemLog:
+  destination: file
+  path: /proc/1/fd/1
+  logAppend: true
